# ask-gemini

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  build.sh  pyproject.toml  skill.md
.github/workflows/: ci.yml
ask_gemini/: client.py  config.py  main.py
tests/: test_ask_gemini.py  test_error_handling.py  test_resume_session.py
