[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-gemini"
version = "0.2.1"
description = "CLI tool to chat with Gemini from the terminal — no API key needed"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gemini-webapi>=1.14.0",
    "browser-cookie3>=0.20.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.scripts]
ask-gemini = "ask_gemini.main:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call the real Gemini API (skipped on CI)",
]
